# 6to4_converter

./: .gitignore  6to4_converter.py  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  sonar-project.properties
.archive/.github_archived/workflows/: ci.yml
.gitea/workflows/: ci.yml  release.yml
.github/workflows/: ci.yml
app/: main.py
tests/: test_main.py
