[project]
name = "6to4-converter"
version = "0.0.0"
description = "A simple tool to convert IPv6 addresses to IPv4 addresses and vice versa."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "argparse==1.4.0",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "coverage>=7.13.1",
    "isort>=7.0.0",
    "pylint>=4.0.4",
    "pylint-exit>=1.2.0",
    "pytest>=9.0.2",
    "zipp>=3.19.1",
]
